# priv_tauri_updater

./: Cargo.toml
src/: lib.rs  test.rs
