[package]
name = "priv_tauri_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["sync"] }
warp = "0.3.7"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["macros", "process", "rt"] }
